--- a/css/featured.css
+++ b/css/featured.css
@@ -1,36 +1,61 @@
-.banner{
-    padding: 20px;
-    margin-top: 10vh;
-
+.featured_blog{
+    color: black;
+    object-fit: contain;
+    height: 500px;
+    margin: 10px 20px 30px 20px;
+    /* margin-top:100px ; */
+    border-radius: 25px;
+    /* box-shadow: 13px 14px 15px red; */
 }
 
-.feature-img{
-    
-    width: 100%;
-    height:83vh;
-    border-radius: 35px;
+.featured_blog_contents{
+    margin-left: 30px;
+    padding-top: 140px;
+    height:190px;
 }
 
-.contents{
-    position: absolute;
-    margin-top:30vh;
-    margin-left: 8vh;
-    width: 18vw;
-    color:white;
+.featured_blog_title{
+    font-size: 3rem;
+    font-weight: 800;
+    padding-bottom: 0.3rem;
 }
 
-.heading{
-    font-size: 30px;
-    margin-bottom: 10px;
+.featured_blog_description{
+    width: 45rem;
+    line-height: 1.3;
+    padding-top: 1rem;
+    font-size: 0.8rem;
+    max-width: 360px;
+    height:80px;  
 }
 
-.gradient{
-    margin-left:0px;
-    height:83vh;
-    width:28vw;
-    border-radius: 35px 0 0 35px;
-    background-image: linear-gradient(270deg,
-                transparent,
-                rgba(37, 37, 37, .31),rgba(37, 37, 37, .41),rgba(37, 37, 37, .61),rgba(37, 37, 37, .81),rgba(37, 37, 37, .91),
-                rgb(37,37,37));
+.featured_blog_button{
+    cursor:pointer;
+    color: #fff;
+    outline:none;
+    border:none;
+    font-weight:700;
+    border-radius:0.2vw;
+    padding-left:2rem;
+    padding-right:2rem;
+    margin-right:1rem;
+    padding-top:0.5rem;
+    background-color: rgba(51,51,51,0.5);
+    padding-bottom: 0.5rem;
+}
+
+.featured_blog_button:hover{
+    color: black;
+    background-color: white;
+    transition: all 0.2s;
+}
+
+.featured_blog_fadeBottom{
+    height: 11rem;
+    border-radius: 0px 0px 25px 25px;
+    background-image: linear-gradient(180deg,
+    transparent,
+    rgba(37,37,37,0.61),
+    #111
+    );
 }
