--- a/css/featured.css
+++ b/css/featured.css
@@ -1,10 +1,12 @@
 .featured_blog{
-    color: black;
+    color: rgb(255, 255, 255);
     object-fit: contain;
     height: 500px;
-    margin: 10px 20px 30px 20px;
+    /* position: absolute; */
+    
+    /* margin: 10px 20px 30px 20px; */
     /* margin-top:100px ; */
-    border-radius: 25px;
+    /* border-radius: 25px; */
     /* box-shadow: 13px 14px 15px red; */
 }
 
@@ -52,7 +54,7 @@
 
 .featured_blog_fadeBottom{
     height: 11rem;
-    border-radius: 0px 0px 25px 25px;
+    /* border-radius: 0px 0px 25px 25px; */
     background-image: linear-gradient(180deg,
     transparent,
     rgba(37,37,37,0.61),
