--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,6 +9,7 @@
     padding: 8px;
     padding-top: 20px ;
     background-color: white;
+    opacity: 0.3;
     z-index: 100;
     opacity: 1;
    
