--- a/client/css/blogcard2.css
+++ b/client/css/blogcard2.css
@@ -1,17 +1,54 @@
-.bcard2{
-    height:350px ;
-    width: 430px ;
-    background: url("https://images.unsplash.com/photo-1681217684376-82f841d33f18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=60");
-   background-repeat: no-repeat;
-   object-fit: cover;
-   background-size: cover;
-   background-blend-mode: lighten;
+.bcard2 {
+    height: 350px;
+    width: 430px;
+    /* background: url("https://images.unsplash.com/photo-1681217684376-82f841d33f18?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwxM3x8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=60"); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-blend-mode: lighten;
+    margin-left: 7px;
+    margin-right: 7px;
+}
 
-} 
-
-.overlay{
+.overlay {
     color: white;
     height: 100%;
     width: 100%;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.4);
+    position: relative;
+}
+
+.bcard2_tag {
+    width: 90px;
+    height: 25px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    font-size: 13px;
+}
+
+.bcard2_data {
+    position: absolute;
+    top: 150px;
+    left: 30px;
+    right: 30px;
+}
+
+.bcard2_date {
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.bcard2_title {
+    font-size: 24px;
+    margin: 10px 0 10px 0;
+    font-family: 'Raleway', sans-serif;
+}
+
+.bcard2_para {
+    font-size: 12px;
 }
