--- a/client/css/blogcard2.css
+++ b/client/css/blogcard2.css
@@ -7,13 +7,16 @@
     background-blend-mode: lighten;
     margin-left: 7px;
     margin-right: 7px;
+    box-shadow: 0px 0px 30px whitesmoke;
+    background-position: 0%;
 }
+
 
 .overlay {
     color: white;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.258);
     position: relative;
 }
 
@@ -33,7 +36,7 @@
 
 .bcard2_data {
     position: absolute;
-    top: 150px;
+    top: 200px;
     left: 30px;
     right: 30px;
 }
@@ -47,8 +50,21 @@
     font-size: 24px;
     margin: 10px 0 10px 0;
     font-family: 'Raleway', sans-serif;
+    cursor: pointer;
+    
+}
+
+.bcard2_title:hover {
+    font-size: 30px;
+    text-decoration: underline;
+    color: floralwhite;
+
+    transition-timing-function: ease-out;
+    transition: font 0.2s;
 }
 
 .bcard2_para {
-    font-size: 12px;
+    font-size: 14px;
+    font-family: 'Lora', serif;
+    text-shadow: 0px 0px 90px black;
 }
