--- a/client/css/explore.css
+++ b/client/css/explore.css
@@ -9,13 +9,14 @@
     width: 70%;
     margin: 20px;
     padding: 0px 20px;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
-
 .right_pane{
     
     /* background-color: #1C213E; */
     border-left: 1px solid silver;
-    color: white;
+    color: black;
     width: 30%;
 }
 
@@ -48,7 +49,7 @@
 
 .nav_links{
     font-size: 14px !important;
-    /* background-color: antiquewhite; */
+    cursor: pointer;
 }
 #header{
     font-size: 25px;
@@ -80,4 +81,28 @@
 .tab-buttons:active{
     background-color: black;
     color:white;
+}
+
+
+
+.user_card{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin:30px 25px;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.119);
+    border-radius: 10px;
+}
+
+#user_img{
+    border: 1px solid silver;
+    border-radius: 100%;
+    margin-bottom: 12px;
+}
+
+.usr_txt{
+    margin: 2px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
