--- a/client/css/blogcard2.css
+++ b/client/css/blogcard2.css
@@ -5,8 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-blend-mode: lighten;
-    margin-left: 7px;
-    margin-right: 7px;
+    margin: 7px;
     box-shadow: 0px 0px 30px whitesmoke;
     background-position: 0%;
 }
