--- a/client/css/bloghorz.css
+++ b/client/css/bloghorz.css
@@ -18,31 +18,34 @@
 }
 
 .txt_head{
-    margin-left: 10px !important;
-    font-size: 14px !important;
+    font-size: 13px !important;
+    color: rgb(78, 78, 78);
 }
 
 .data{
 
 font-family:"Open Sans" , sans-serif;
 width: 70%;
-font-size: 14px;
+font-size: 12px;
 text-align: justify;
+
 }
 
 
 #img_sml{
-    height: 140px;
-    width: 140px;
+    height: 160px;
+    width: 180px;
+    border-radius: 3px;
     object-fit: cover;
+    box-shadow: 0px 0px 30px whitesmoke;
 }
 
 #title{
     cursor: pointer;
-    font-size: 25px;
+    font-size: 22px;
     font-weight: bolder;
-    color: black;
-    margin-bottom: 8px;
+    color: rgb(32, 32, 32);
+    margin-bottom: 5px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 
@@ -51,17 +54,16 @@ text-align: justify;
 }
 
 .extra{
-    margin-top: 20px;
+    margin-top: 15px;
     display: flex;
     padding: 2px;
     align-items: center;
 }
 
 #btn-tag{
-    border:none;
-    border-radius: 8px;
-    padding: 5px;
-
+    color:rgb(62, 62, 230);
+    margin-left: 12px ;
+    font-size:14px;
 }
 #ttr{
     font-size: small;
