--- a/client/css/navbar.css
+++ b/client/css/navbar.css
@@ -31,7 +31,16 @@
 .content-items{
     margin-left: 10px;
     margin-right: 10px;
+    
+    padding-bottom: 4px;
+    font-size: 15px;
 }
+
+.content-items:hover{
+    color: purple;
+  border-bottom: 3px solid #9867C5;
+}
+
 
 .signin{
     align-items: center;
